Istio/destinationrule-transaction.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: transaction-destinationrule
spec:
  host: transaction-service
  trafficPolicy:
    connectionPool:
     tcp:
      maxConnections: 100
    http:
      http1MaxPendingRequests: 50
      maxRequestsPerConnection: 10
  outlierDetection:
    consecutiveErrors: 5
    interval: 10s
    baseEjectionTime: 30s
    maxEjectionPercent: 50
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
